# local-ai-chat

./: .env.example  .env_sample  .gitignore  README.ja.md  README.md  pyproject.toml
app/: llm.py  main.py  resource_loader.py  settings.py  ui.py
data/: chat_history.json  llm_instruction.txt  llm_message_example.json
util/: llm_chat.py
