[project]
name = "app"
version = "0.1.0"
description = "Local AI Chat App"
authors = [
    {name = "oha"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiofiles (>=24.1.0,<25.0.0)",
    "gradio (>=5.29.0,<6.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-core (>=0.3.57,<0.4.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
types-aiofiles = "^24.1.0.20250326"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
